--- a/src/states/rpi.fsm.in
+++ b/src/states/rpi.fsm.in
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Finite-State-Machine Version="0.3" InitialState="ActiveState">
-        <Variable Name="Loop" Value="2"> </Variable>
-        <Variable Name="Test" Value="20"> </Variable>
         <State Name="ActiveState" Class="ActiveState">
                 <Transition OnEvent="poweroff" ToState="TransitionPowerOff">
                 </Transition>
-                <Transition OnEvent="reboot" ToState="RebootState">
+                <Transition OnEvent="reboot" ToState="TransitionReboot">
                 </Transition>
         </State>
         <State Name="ActiveStandbyState" Class="ActiveStandbyState">
@@ -14,14 +12,20 @@
                 <Transition OnEvent="reboot" ToState="RebootState">
                 </Transition>
         </State>
-        <State Name="RebootState" Class="RebootState">
-        </State>
         <State Name="TransitionPowerOff" Class="TransitionPowerOff">
                 <Transition OnEvent="NACK" ToState="ActiveState">
                 </Transition>
                 <Transition OnEvent="ACK" ToState="PowerOffState">
                 </Transition>
         </State>
+        <State Name="TransitionReboot" Class="TransitionReboot">
+                <Transition OnEvent="NACK" ToState="ActiveState">
+                </Transition>
+                <Transition OnEvent="ACK" ToState="RebootState">
+                </Transition>
+        </State>
         <State Name="PowerOffState" Class="PowerOffState">
+        </State>
+        <State Name="RebootState" Class="RebootState">
         </State>
 </Finite-State-Machine>
