--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # @@@LICENSE
 #
-#   Copyright (c) 2017 LG Electronics Inc. All Rights Reserved
+#   Copyright (c) 2017-2020 LG Electronics Inc. All Rights Reserved
 #
 # LICENSE@@@
 
@@ -34,15 +34,17 @@ pkg_check_modules(PBNJSON_CPP REQUIRED pbnjson_cpp)
 include_directories(${PBNJSON_CPP_INCLUDE_DIRS})
 webos_add_compiler_flags(ALL ${PBNJSON_CPP_CFLAGS_OTHER})
 
+include_directories(include/private)
+include_directories(include/public)
 include_directories(include/private/states)
 
 add_definitions(-DPMS_CONF_FILE_PATH="/var/PMS/pms.conf")
-add_definitions(-DFSM_FILE_PATH="/var/PMS/rpi.fsm")
+add_definitions(-DFSM_FILE_PATH="/var/PMS/pms.fsm")
 file(GLOB SOURCE_FILES
                  src/*.cpp
                  src/*/*.cpp)
 
-webos_build_configured_file(src/states/rpi.fsm LOCALSTATEDIR PMS)
+webos_build_configured_file(src/states/pms.fsm LOCALSTATEDIR PMS)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
 
